Updated to reflect common Symphony and Stage web changes

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,9 @@
       {% endif %}
     {% endfor %}
 
+    <a class="sidebar-nav-item" href="{{ site.usergroup }}">User Group</a>
     <a class="sidebar-nav-item" href="{{ site.gitbook.book }}/content/">Documentation</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="{{ site.github.org }}">GitHub Organization</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
